Changed title to Ice and Fire

--- a/fire-and-ice.html
+++ b/fire-and-ice.html
@@ -17,7 +17,7 @@
     </div>
     <div class="section white">
       <div class="row container">
-        <h1 class="header">Fire and Ice</h1>
+        <h1 class="header">Ice and Fire</h1>
       </div>
     </div>
     <div class="parallax-container">
